--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,8 +1,8 @@
 .navbar {
     background-color: #B0C4DE;
-    position: fixed;
+    position: relative;
     top: 0;
-    height: 80px;
+    height: 100px;
     line-height: 60px;
     width: 100vw;
   list-style-type: none;
@@ -75,6 +75,21 @@
   text-decoration: none;
   transition: all 0.5s ease;
   -webkit-transition: all 0.5s ease;
+}
+
+.content {
+  background-color: aliceblue;
+    top: 0;
+    margin: 0 10px;
+    padding: 10 10 10 10px;
+    line-height: 60px;
+    width: 100vw;
+  list-style-type: none;
+}
+
+#img {
+  height: 200px;
+  
 }
   
 
